--- a/styles.css
+++ b/styles.css
@@ -4,56 +4,35 @@
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+}
+
 hr {
-    width: 739px;
+    width: 779px;
     float:right;
     height: 1px;
     border-bottom: none;
     border-color: #000;
 }
 
+/* -------- CART ---------- */
+
 .cart-bar {
     position: fixed;
     top: 0;
     right: 0;
     height: 100vh;
-    border: 2px solid black;
-    width: 200px;
+    border-left: 1px solid #000;
+    width: 250px;
     background-color: #fff;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    z-index: 10;
 }
 
-.cart {
-    width: 200px;
-    height: 200px;
-    border: 1px solid black;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.tip {
-    width: 200px;
-    height: 200px;
-    border: 1px solid black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-
-.total {
-    width: 200px;
-    height: 200px;
-    border: 1px solid black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
 
 
@@ -61,7 +40,7 @@ hr {
 
 .hero {
     margin-top: 49.2px;
-    width: calc(100vw - 200px);
+    width: calc(100vw - 250px);
     height: 400px;
     background-image: url('img/hero-1.jpeg');
     background-size:auto;
@@ -82,6 +61,7 @@ hr {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 10;
 }
 
 .logo h5 {
@@ -104,13 +84,28 @@ h5.logo-warp-three {
 }
 
 nav {
-    width: 100%;
+    width: 794px;
+    float: right;
+    position: sticky;
+    top: 0;
+    background-color: #fff;
+    z-index: 5;
+    border-left: 1px solid;
+    border-bottom: 1px solid #000;
+    border-color: transparent;
+    transition: all ease 500ms
+}
+
+nav::after {
+    content: '';
+    display: table;
+    clear: both;
 }
 
 .nav-links {
     display: flex;
     list-style-type: none;
-    width: calc(100% - 200px);
+    width: calc(100% - 250px);
     flex-wrap: wrap;
     justify-content: end;
 }
@@ -118,6 +113,14 @@ nav {
 .nav-links li {
     text-align: center;
     margin: 15px 30px;
+}
+
+.nav-links li:first-of-type {
+    margin-left: 0px;
+}
+
+.nav-links li:last-of-type {
+    margin-right: 20px;
 }
 
 .nav-links a {
@@ -133,7 +136,7 @@ nav {
     left: 0;
     bottom: -16px;
     width: 100%;
-    height: 1px;
+    height: 1.25px;
     background-color: #ba6fb4;
     opacity: 0;
 }
@@ -146,4 +149,51 @@ nav {
     opacity: 1;
 }
 
+/* -------- MENU ------- */
 
+.waffles {
+    margin-top: 100px;
+}
+
+.menu {
+    margin-top: 30px;
+    padding: 10px;
+}
+
+.menu-item-container {
+    height: 150px;
+    width: calc(100% - 270px);
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px rgba(0,0,0,0.2);
+    position: relative;
+    margin: 10px;
+    cursor: pointer;
+    transition: ease all 250ms;
+}
+
+.menu-item-container:hover {
+    box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
+}
+
+.item-picture {
+    width: 150px;
+    height: 150px;
+    float: left;
+    border-radius: 10px 0px 0px 10px;
+    object-fit: cover;
+    margin-right: 10px;
+}
+
+.item-name {
+   padding: 10px;
+}
+
+.item-description {
+    padding: 10px;
+}
+
+.item-price {
+    position: absolute;
+    bottom: 10px;
+    left: 160px;
+}
