--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ h5.logo-warp-three {
 }
 
 nav {
-    width: 795px;
+    width: 800px;
     float: right;
     position: sticky;
     top: 0;
@@ -93,7 +93,8 @@ nav {
     border-left: 1px solid;
     border-bottom: 1px solid #000;
     border-color: transparent;
-    transition: all ease 250ms
+    transition: all ease 250ms;
+    border-radius: 0px 0px 0px 5px;
 }
 
 nav::after {
@@ -116,7 +117,7 @@ nav::after {
 }
 
 .nav-links li:first-of-type {
-    margin-left: 0px;
+    margin-left: 10px;
 }
 
 .nav-links li:last-of-type {
