--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,18 @@ a {
 }
 
 hr {
-    width: 744px;
-    float:right;
+    width: 749px;
+    float: right;
     height: 1px;
     border-bottom: none;
     border-color: #000;
 }
 
+hr::after {
+    content: '';
+    display: table;
+    clear: both;
+}
 /* -------- CART ---------- */
 
 .cart-bar {
@@ -106,9 +111,9 @@ nav::after {
 .nav-links {
     display: flex;
     list-style-type: none;
-    width: calc(100% - 250px);
+    width: 100%;
     flex-wrap: wrap;
-    justify-content: end;
+    justify-content: start;
 }
 
 .nav-links li {
@@ -117,7 +122,7 @@ nav::after {
 }
 
 .nav-links li:first-of-type {
-    margin-left: 0px;
+    margin-left: 20px;
 }
 
 .nav-links a {
@@ -133,7 +138,7 @@ nav::after {
     left: 0;
     bottom: -16px;
     width: 100%;
-    height: 1.25px;
+    height: 1.5px;
     background-color: #ba6fb4;
     opacity: 0;
 }
