--- a/styles.css
+++ b/styles.css
@@ -57,10 +57,12 @@ hr::after {
 
 
 .logo {
-    height: 175px;
-    width: 175px;
+    height: 160px;
+    width: 210px;
     background-image: url('img/logo.png');
     background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
     position: absolute;
     bottom: -75px;
     left: 70px;
@@ -68,6 +70,8 @@ hr::after {
     justify-content: center;
     align-items: center;
     z-index: 10;
+    background-color: #fff;
+    border-radius: 50%;
 }
 
 .logo h5 {
@@ -76,7 +80,7 @@ hr::after {
     text-align: center;
     bottom: 38px;
     text-shadow: 0px 0px 5px #ba6fb4;
-    margin: 64px 3px 0px 3px;
+    margin: 64px 1.5px 0px 1.5px;
 }
 
 h5.logo-warp-one {
