--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,8 @@ hr::after {
     background-image: url('img/hero-1.jpeg');
     background-size:auto;
     background-position: center;
-    border: #000 1px solid;
+    border-top: #000 1px solid;
+    border-bottom: #000 1px solid;
     position: relative;
 }
 
