--- a/styles.css
+++ b/styles.css
@@ -204,3 +204,97 @@ nav::after {
     bottom: 10px;
     left: 160px;
 }
+
+/* -------- MODAL -------- */
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 10;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0, 0.5);
+}
+
+.modal-content-container {
+    background-color: #fff;
+    margin: 20% auto;
+    padding: 30px 20px;
+    width: 55%;
+    height: auto;
+    box-shadow: 1px 5px 8px rgba(0,0,0, 0.5), -1px -5px 8px rgba(0,0,0,0.5);
+    border-radius: 10px;
+    position: relative; 
+    top: -240px;
+}
+
+.closeBtn {
+    cursor: pointer;
+    position: absolute;
+    top: -10px;
+    right: 5px;
+    color: #e93131;
+    font-size: 2.5em;
+}
+
+.modal-content-container hr {
+    width: 100%;
+    margin: 1em auto;
+}
+
+input,
+    label {
+    cursor: pointer;
+    margin: 1px;
+}
+
+.free-syrup-flex {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.flex-modal-extra-items p {
+    float: right;
+}
+
+.extra-syrup div,
+    .toppings div,
+        .free-syrup-flex  {
+    margin: 5px;
+}
+
+.add-to-cart {
+    margin: 0 auto;
+    text-align: center;
+}
+
+.add-to-cart p {
+    
+    margin-top: 23px;
+}
+
+.add-to-cart-btn {
+    padding: 1em 2.5em;
+    border-radius: 10px;
+    background-color: #f4a32c;
+    border: none;
+    cursor: pointer;
+    font-size: 1.15em;
+}
+
+button:active {
+    transform: scale(.98);
+}
+
+button:hover {
+    background-color: #ed9015;
+}
+
+.modal-total {
+    position: absolute;
+    bottom: 46px;
+    right: 30px;
+}
