--- a/styles.css
+++ b/styles.css
@@ -202,7 +202,7 @@ nav::after {
 /* -------- MODAL -------- */
 
 .modal {
-    display: block;
+    display: none;
     position: fixed;
     z-index: 10;
     left: 0;
