--- a/styles.css
+++ b/styles.css
@@ -182,6 +182,7 @@ nav::after {
     float: left;
     border-radius: 5px 0px 0px 5px;
     object-fit: cover;
+    object-position: center;
     margin-right: 10px;
 }
 
