--- a/styles.css
+++ b/styles.css
@@ -280,6 +280,7 @@ nav::after {
     width: 100%;
     overflow: auto;
     background-color: rgba(0,0,0, 0.5);
+    overscroll-behavior: contain;
 }
 
 .modal-content-container {
@@ -287,7 +288,7 @@ nav::after {
     margin: 1.5% auto;
     padding: 30px 20px;
     width: 55%;
-    height: auto;
+
     box-shadow: 1px 5px 8px rgba(0,0,0, 0.5), -1px -5px 8px rgba(0,0,0,0.5);
     border-radius: 10px;
     position: relative; 
