--- a/styles.css
+++ b/styles.css
@@ -157,15 +157,12 @@ nav::after {
     display: flex;
     width: 100%;
     height: 75px;
-    border: 1px solid black;
-    justify-content: space-evenly;
     align-items: center;
     position: relative;
 }
 
-.fa-trash {
-    font-size: 1em;
-    color: #e93131;
+.cart-item-container div {
+    margin-left: 7.5px;
 }
 
 .cart-item-remove {
@@ -173,18 +170,20 @@ nav::after {
     border: none;
     outline: none;
     cursor: pointer;
-    height: 100%;
-    width: 10%;
+    font-size: 1em;
+    color: #e93131;
+    margin-left: 10px;
 }
 
 .cart-item-number {
-    width: 10%;
+    width: 15%;
+    text-align: center;
 }
 
 .cart-item-info {
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 45%;
     height: 100%;
     text-align: left;
     justify-content: center;
@@ -195,6 +194,8 @@ nav::after {
     width: 100%;
     overflow: hidden;
     white-space: nowrap;
+    text-align: left;
+    
 }
 
 .cart-item-additions {
@@ -202,6 +203,7 @@ nav::after {
     text-overflow: ellipsis;
     width: 100%;
     overflow:hidden;
+    text-align: left;
     white-space: nowrap;
 }
 
@@ -211,7 +213,7 @@ nav::after {
 }
 
 .cart-price {
-    width: 15%;
+    width: 20%;
 }
 
 
@@ -412,8 +414,4 @@ input::-webkit-inner-spin-button {
 /* Firefox  NUM-ADD ARROW REMOVE*/
 input[type=number] {
   -moz-appearance: textfield;
-}
-
-.stored-price {
-    display: none;
 }
