--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,14 @@ hr {
     z-index: 2;
 }
 
+.cart-bar-cont {
+    display: none;
+    height: 80vh;
+    width: 100%;
+    overflow: auto;
+}
+
+
 .checkout {
     position: absolute;
     bottom: 50px;
@@ -307,6 +315,12 @@ nav::after {
     position: relative; 
 }
 
+.drinks-modal {
+    display: none;
+}
+
+
+
 .closeBtn {
     cursor: pointer;
     position: absolute;
@@ -327,20 +341,39 @@ input,
     margin: 1px;
 }
 
-.free-syrup-flex {
+.free-syrup-flex,
+    .eggs-flex,
+        .potato-flex,
+            .meat-flex,
+                .almond-milk-flex,
+                    .milk-flex, .juice-flex, .tea-flex, .coffee-flex
+                        {
     display: flex;
     justify-content: space-evenly;
 }
 
-.flex-modal-extra-items p {
+.flex-modal-extra-items p,
+    .avacado-flex p,
+        .coffee-options p,
+            .tea-options p {
     float: right;
 }
 
 .extra-syrup div,
     .toppings div,
-        .free-syrup-flex  {
+        .free-syrup-flex,
+            .eggs-flex,
+                .meat-flex,
+                    .potato-flex,
+                        .avacado-flex div,
+                            .almond-milk-flex,
+                                .milk-flex,
+                                    .juice-flex, .tea-flex, .coffee-flex, .coffee-options, .tea-options
+          {
     margin: 5px;
 }
+
+
 
 .add-to-cart {
     margin: 0 auto;
