--- a/styles.css
+++ b/styles.css
@@ -342,10 +342,11 @@ input,
 }
      
 .flexed-modal-item {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin: 5px;
+display: flex;
+justify-content: space-evenly;
+align-content: center;
+width: 100%;
+margin: 5px;
 }
 
 .flex-modal-extra-items p,
@@ -359,11 +360,10 @@ input,
     .toppings div,
          .avacado-flex div,
              .coffee-options, 
-                .tea-options
+                .tea-options 
                      {
     margin: 5px;
 }
-
 
 
 .add-to-cart {
