--- a/styles.css
+++ b/styles.css
@@ -359,8 +359,8 @@ margin: 5px;
 .extra-syrup div,
     .toppings div,
          .avacado-flex div,
-             .coffee-options, 
-                .tea-options 
+             .coffee-options div, 
+                .tea-options div
                      {
     margin: 5px;
 }
