--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,13 @@
     font-family: 'Shippori Mincho B1', serif;
 }
 
+
 a {
     text-decoration: none;
+}
+
+button a {
+    color:#000;
 }
 
 hr {
@@ -63,9 +68,9 @@ hr {
 /* --------- HERO ------------- */
 
 .hero {
-    margin-top: 49.2px;
+    margin-top: 50px;
     width: calc(100vw - 250px);
-    height: 400px;
+    height: 475px;
     background-image: url('img/hero-1.jpeg');
     background-size:auto;
     background-position: center;
@@ -76,20 +81,36 @@ hr {
 
 
 .logo {
-    height: 160px;
+    height: 198px;
     width: 210px;
     background-image: url('img/logo.png');
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
     position: absolute;
-    bottom: -75px;
+    bottom: -100px;
     left: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #fff;
-    border-radius: 50%;
+    border-radius: 30%;
+    z-index: 1;
+}
+
+.logo-two {
+    height: 100px;
+    width: 212px;
+    background-color: red;
+    position: absolute;
+    bottom: 0px;
+    left: 69px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 30% 30% 0% 0%;
+    border: 1px solid black;
 }
 
 .logo h5 {
@@ -98,17 +119,18 @@ hr {
     text-align: center;
     bottom: 38px;
     text-shadow: 0px 0px 5px #ba6fb4;
-    margin: 64px 1.25px 0px 1.25px;
+    margin: 64px 2px 0px 2.5px;
+    font-size: 1em;
 }
 
 h5.logo-warp-one {
-    transform: rotateY(30deg) rotate(7deg) translateY(-1px);
+    transform: rotateY(30deg) rotate(10deg) translateY(7px);
 }
 h5.logo-warp-two {
-    transform: translateY(-5px);
+    transform: translateY(0px);
 }
 h5.logo-warp-three {
-    transform: rotateY(-25deg) rotate(-6deg) translateY(-3.5px);
+    transform: rotateY(-25deg) rotate(-8deg) translateY(2px);
 }
 
 nav {
@@ -235,14 +257,19 @@ nav::after {
     width: 20%;
 }
 
-
+.name {
+    font-size: 4em;
+    margin-top: 80px;
+    margin-left: 20px;
+    color: #000;
+}
 
 
 
 /* -------- MENU ------- */
 
-.waffles {
-    margin-top: 100px;
+.menu-top {
+    margin-top: 200px;
 }
 
 .menu {
@@ -332,8 +359,6 @@ nav::after {
 .drinks-modal {
     display: none;
 }
-
-
 
 .closeBtn {
     cursor: pointer;
