--- a/cartstyles.css
+++ b/cartstyles.css
@@ -41,22 +41,33 @@ button a {
     height: 75px;
     margin: 1em .5em;
     border-radius: 10%;
-    border: 1px solid #a757b5;
+    border: 2px solid #a757b5;
     color: #a757b5;
     font-weight: bolder;
     font-size: 1em;
     outline: 0;
-    background-color: #fff;
+    background-color: #f7f7f7;
     cursor: pointer;
 }
 
+.tip-ten:disabled,
+    .tip-fif:disabled,
+        .tip-twe:disabled {
+            cursor: not-allowed;
+            border-color
+        }
+
 .tip-btn:hover {
-    background-color: #a757b5;
-    color: #fff;
+    box-shadow: 0px 0px 2px #000;
 }
 
 .tip-btn:active {
     transform: scale(.98);
+}
+
+.tip-active {
+    background-color: #a757b5;
+    color: #fff;
 }
 
 
@@ -122,6 +133,7 @@ background-color: #fff;
 margin: 0 .75em;
 font-size: 1.25em;
 }
+
 .cart-item-remove i,  
 .cart-one-item-remove i  {
     color: #e93131;
@@ -136,7 +148,6 @@ font-size: 1.25em;
     display: flex;
     justify-content: space-between;
     align-items: center;
-   
 }
 
 .cart-items-cont {
@@ -206,6 +217,7 @@ font-size: 1.25em;
 
 .linked-store {
     margin: 1em auto;
+    margin-top: 0;
     padding-bottom: 1em;
     width: 100%;
     text-align: center;
