--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,12 @@ a {
     z-index: 2;
 }
 
+@media (max-width: 1075px) {
+    .cart-bar {
+        display: none;
+    }
+}
+
 .cart-bar-cont {
     display: none;
     height: 80vh;
@@ -80,6 +86,19 @@ a {
     position: relative;
 }
 
+@media (max-width: 1075px) {
+    .hero {
+        width: 100vw;
+    }
+}
+
+@media (max-width: 650px) {
+    .hero {
+     background-position: center bottom 35%;
+     border-top: none;
+
+    }
+}
 
 .logo {
     height: 198px;
@@ -99,6 +118,7 @@ a {
     z-index: 1;
 }
 
+
 .logo-two {
     height: 90px;
     width: 212px;
@@ -113,6 +133,7 @@ a {
     border-radius: 30% 30% 0% 0%;
     border: 1px solid black;
 }
+
 
 .logo h5 {
     color: #f7f7f7;
@@ -133,6 +154,39 @@ h5.logo-warp-three {
     transform: rotateY(-25deg) rotate(-8deg) translateY(3px);
 }
 
+@media (max-width: 650px) {
+    .logo {
+        height: 228px;
+        width: 240px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .logo-two {
+        height: 120px;
+        width: 242px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .logo h5 {
+        margin: 64px 2.5px 0px 3px;   
+    }
+
+    h5.logo-warp-one {
+        transform: rotateY(30deg) rotate(10deg) translateY(15px);
+    }
+    h5.logo-warp-two {
+        transform: translateY(5px);
+    }
+    h5.logo-warp-three {
+        transform: rotateY(-25deg) rotate(-8deg) translateY(8px);
+    }
+
+}
+
+/* ---- NAV ------ */
+
 nav {
     width: 572px;
     float: right;
@@ -148,8 +202,10 @@ nav {
     margin-right: 250px;
 }
 
-@media (max-width: 1080px) {
-    
+@media (max-width: 1075px) {
+    nav {
+        margin-right: 0px;
+    }
 }
 
 nav hr {
@@ -163,8 +219,8 @@ nav hr {
 .nav-links {
     display: flex;
     list-style-type: none;
-    flex-wrap: wrap;
     justify-content: space-evenly;
+    align-items: center;
 }
 
 .nav-links li {
@@ -194,6 +250,48 @@ nav hr {
 
 .nav-links a:hover::after {
     opacity: 1;
+}
+
+@media (max-width: 825px) {
+
+    nav {
+        width: 400px;
+    }    
+
+    nav hr {
+        width: 392px;
+    }
+
+    .nav-links {
+        justify-content: space-around;
+    }
+}
+
+@media (max-width: 650px) {
+    nav {
+        width: 100vw;
+        height: 45px;
+        position: fixed;
+        top: 0;
+        background-color: #f7f7f7;
+        z-index:10;
+        border-radius: 0;
+    }
+
+    .nav-links li {
+        margin: 7.5px 0;
+    }
+
+    nav hr {
+        border-color: transparent;
+    }
+
+    .nav-links a::after {
+        position: absolute;
+        content: '';
+        left: 0;
+        bottom: -12px;
+    }
 }
 
 /* ----- CART ------- */
@@ -251,7 +349,6 @@ nav hr {
     font-size: 8px;
 }
 
-
 .cart-price {
     width: 20%;
 }
@@ -263,29 +360,48 @@ nav hr {
     color: #000;
 }
 
-
-
 /* -------- MENU ------- */
 
+.menu-flexed {
+    width: calc(100% - 250px);
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .menu-top {
-    margin-top: 200px;
+    margin: 150px 10px 10px 10px;
+    padding: 30px;
 }
 
 .menu {
-    margin-top: 10px;
+    margin: 10px;
     padding: 30px;
 }
 
 .menu-item-container {
     height: 150px;
-    width: calc(100% - 280px);
+    width: 48%;
     border-radius: 5px;
     box-shadow: 0px 0px 5px rgba(0,0,0,0.2);
     position: relative;
-    margin: 15px;
+    margin: 5px 5px 5px 10px;
     cursor: pointer;
     transition: ease all 250ms;
     background-color: #fff;
+}
+
+@media (max-width: 1075px) {
+    .menu-flexed  {
+        display: block;
+        width: 97vw;
+        padding: 0px;
+        margin: 0 auto;
+    }
+
+    .menu-item-container {
+        width: 100%;
+        margin: 10px 0;
+    }
 }
 
 .menu-item-container:hover {
@@ -347,13 +463,19 @@ nav hr {
 
 .modal-content-container {
     background-color: #f7f7f7;
-    margin: 1.5% auto;
+    margin: 2.5% auto;
     padding: 30px 20px;
     width: 55%;
-
     box-shadow: 1px 5px 8px rgba(0,0,0, 0.5), -1px -5px 8px rgba(0,0,0,0.5);
     border-radius: 10px;
     position: relative; 
+}
+
+@media (max-width: 1075px) {
+    .modal-content-container {
+        font-size: .75em;
+        width: 65%;
+    }
 }
 
 .drinks-modal {
@@ -409,6 +531,9 @@ margin: 5px;
 .add-to-cart {
     margin: 0 auto;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
 .add-to-cart-btn {
@@ -434,16 +559,18 @@ button:focus,
 }
 
 .modal-total {
-    position: absolute;
-    bottom: 46px;
-    right: 30px;
     font-size: 1.65em;
 }
 
+@media (max-width: 825px) {
+
+    .modal-total {
+        font-size: 1.5em;
+    }
+
+}
+
 .add-container {
-    position: absolute;
-    bottom: 46px;
-    left: 30px;
     border: 1px solid #656566;
     border-radius: 10px;
 }
