--- a/styles.css
+++ b/styles.css
@@ -273,7 +273,7 @@ nav hr {
         height: 45px;
         position: fixed;
         top: 0;
-        background-color: #f7f7f7;
+        background-color: #f7f7f7 !important;
         z-index:10;
         border-radius: 0;
     }
