--- a/styles.css
+++ b/styles.css
@@ -274,8 +274,8 @@ nav hr {
         position: fixed;
         top: 0;
         background-color: #f7f7f7 !important;
-        z-index:10;
         border-radius: 0;
+        border-left: none;
     }
 
     .nav-links li {
@@ -287,10 +287,21 @@ nav hr {
     }
 
     .nav-links a::after {
-        position: absolute;
-        content: '';
-        left: 0;
         bottom: -12px;
+    }
+}
+
+@media (max-width: 374px) {
+    nav {
+        font-size: .75em;
+    }
+
+    .nav-links li {
+        margin: 12px 0;
+    }
+
+    .nav-links a::after {
+        bottom: -15px;
     }
 }
 
@@ -463,7 +474,7 @@ nav hr {
 .modal-content-container {
     background-color: #f7f7f7;
     margin: 2.5% auto;
-    padding: 30px 20px;
+    padding: 25px 20px;
     width: 55%;
     box-shadow: 1px 5px 8px rgba(0,0,0, 0.5), -1px -5px 8px rgba(0,0,0,0.5);
     border-radius: 10px;
@@ -490,6 +501,23 @@ nav hr {
     font-size: 2.5em;
 }
 
+@media (max-width: 650px) {
+    .modal-content-container {
+        font-size: .5em;
+        width: 95%;
+    }
+
+    .closeBtn {
+        cursor: pointer;
+        position: absolute;
+        top: -5px;
+        right: 5px;
+        color: #e93131;
+        font-size: 3.5em;
+    }
+}
+
+
 .modal-content-container hr {
     width: 100%;
     margin: 1em auto;
@@ -498,16 +526,24 @@ nav hr {
 input,
     label {
     cursor: pointer;
-    margin: 1px;
     background-color: #f7f7f7;
+    margin: 1px;
 }
      
 .flexed-modal-item {
 display: flex;
-justify-content: space-evenly;
+justify-content: space-around;
 align-content: center;
 width: 100%;
-margin: 5px;
+margin: 5px 0;
+}
+
+.flexed-modal-item div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 2.5px;
+   
 }
 
 .flex-modal-extra-items p,
@@ -532,7 +568,7 @@ margin: 5px;
     text-align: center;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .add-to-cart-btn {
@@ -568,6 +604,8 @@ button:focus,
     }
 
 }
+
+/* --- ADD BUTTON ---- */
 
 .add-container {
     border: 1px solid #656566;
@@ -610,6 +648,30 @@ button:focus,
     border: none;
     margin: 0;
     padding: 0;
+}
+
+@media (max-width: 650px) {
+    .add-container {
+        border: 1px solid #656566;
+        border-radius: 10px;
+    }
+    
+    .minus-btn {
+        width: 25px;
+        font-size: 1.8em;
+
+    }
+    
+    .add-btn {
+        width: 25px;
+        font-size: 1.8em;
+
+    }
+    
+    .num-main-order {
+        width: 25px;
+        font-size: 1.75em;
+    }
 }
 
 /* Chrome, Safari, Edge, Opera NUM-ADD ARROW REMOVE*/
