--- a/styles.css
+++ b/styles.css
@@ -568,7 +568,7 @@ margin: 5px 0;
     text-align: center;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .add-to-cart-btn {
