--- a/styles.css
+++ b/styles.css
@@ -276,6 +276,7 @@ nav hr {
         background-color: #f7f7f7 !important;
         border-radius: 0;
         border-left: none;
+        border-bottom: 1px solid #000;
     }
 
     .nav-links li {
@@ -657,19 +658,16 @@ button:focus,
     }
     
     .minus-btn {
-        width: 20px;
-        font-size: 1.8em;
+        font-size: 2em;
 
     }
     
     .add-btn {
-        width: 20px;
-        font-size: 1.8em;
+        font-size: 2em;
 
     }
     
     .num-main-order {
-        width: 20px;
         font-size: 1.75em;
     }
 }
