--- a/styles.css
+++ b/styles.css
@@ -170,8 +170,8 @@ h5.logo-warp-three {
     }
 
     .logo h5 {
-        margin: 64px 0px 0px 0px;
-        font-size: 1.30em;   
+        margin: 64px 0px 0px 2px;
+        font-size: 1.20em;   
     }
 
     h5.logo-warp-one {
@@ -376,7 +376,7 @@ nav hr {
 .mobile-cart-cont {
     background-color: transparent;
     width: 100vw;
-    height: 100px;
+    height: 75px;
     position: fixed;
     bottom: 25px;
     z-index: 10;
@@ -385,12 +385,30 @@ nav hr {
 
 .mobile-cart {
     background-color: #ba6fb4;
-    width: 85%;
-    height: 100px;
+    width: 95%;
+    height: 75px;
     margin: 0 auto;
     border-radius: 5px;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
+.mobile-cart i {
+    margin-left: 25px;
+}
+
+.mobile-cart-num-cont {
+    margin-right: 25px;
+    background-color: #a757b5;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 /* -------- MENU ------- */
 
 .menu-flexed {
@@ -678,17 +696,18 @@ button:focus,
     
     .minus-btn {
         font-size: 2em;
-
+        padding: 0;
+        margin: 0;
     }
     
     .add-btn {
         font-size: 2em;
-
+        padding: 0;
+        margin: 0;
     }
     
     .num-main-order {
         font-size: 1.75em;
-        color: red;
     }
 }
 
