--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,11 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    cursor: pointer;
+}
+
+.mobile-cart:active {
+    transform:scale(.98);
 }
 
 .mobile-cart i {
@@ -610,8 +615,7 @@ margin: 5px 0;
 
 
 .add-to-cart {
-    margin: 0 auto;
-    text-align: center;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -647,6 +651,10 @@ button:focus,
 
     .modal-total {
         font-size: 1.5em;
+    }
+
+    .add-to-cart-btn {
+        padding: .75em 2em;
     }
 
 }
