--- a/cartstyles.css
+++ b/cartstyles.css
@@ -343,6 +343,8 @@ font-size: 1.25em;
     .order-btn {
         width: 95%
     }
+
+    
 }
 
 @media (max-width: 600px) {
@@ -368,5 +370,22 @@ font-size: 1.25em;
         margin: 15px auto;
     }
 
-    
+    .modal {
+        background-color: #f7f7f7;
+        height: 150px;
+        margin: 15% auto;
+        padding: 25px;
+        width: 95%;
+        box-shadow: 1px 5px 8px rgba(0,0,0, 0.5), -1px -5px 8px rgba(0,0,0,0.5);
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .modal h3 {
+        margin-top: 20px;
+    }
+
 }
