--- a/styles.css
+++ b/styles.css
@@ -244,7 +244,7 @@ h5.logo-warp-three {
 
   .logo h5 {
     padding-top: 10px;
-    margin: 64px 0px 0px 2px;
+    margin: 64px 0px 0px 0px;
     font-size: 1.2em;
   }
 
@@ -298,6 +298,7 @@ nav hr {
 }
 
 .nav-links {
+  width: 100%;
   height: 50px;
   display: flex;
   list-style-type: none;
@@ -357,16 +358,16 @@ nav hr {
     width: 100vw;
     height: 45px;
     position: fixed;
-    display: flex;
-    align-items: center;
     top: 0;
     background-color: #f7f7f7 !important;
     border-radius: 0;
     border-left: none;
     border-bottom: 1px solid #000 !important;
+    
   }
 
   .nav-links {
+    height: 44px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -392,17 +393,33 @@ nav hr {
 }
 
 @media (max-width: 374px) {
+
   nav {
     font-size: 0.75em;
   }
 
+  .nav-links {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
   .nav-links li {
-    margin: 12px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 44px;
+  }
+
+  nav hr {
+    display: none;
+    border-color: transparent;
   }
 
   .nav-links a::after {
-    bottom: -16px;
-    height: 2.5px;
+    bottom: -10px;
+    height: 2px;
   }
 }
 
