--- a/cartstyles.css
+++ b/cartstyles.css
@@ -1,395 +1,386 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Shippori Mincho B1', serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Shippori Mincho B1", serif;
 }
 
 body {
-   background-color: #f7f7f7
+  background-color: #f7f7f7;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 button a {
-    color:#000;
+  color: #000;
 }
 
 hr {
-    width: 95%; 
-    margin: 0 auto;
-    height: 1px;
-    border-bottom: none;
-    border-color: #656566;
+  width: 95%;
+  margin: 0 auto;
+  height: 1px;
+  border-bottom: none;
+  border-color: #656566;
 }
 
 /* ------ LOGO ------- */
 
 .logo-cont {
-    box-shadow: 0px 0px 5px rgba(0,0,0,0.2);
-    margin: 7.5px auto;
-    border-radius: 5px;
-    width: 75%;
-    text-align: center;
-    font-size: 1.75em;
-    background-color: #fff;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  margin: 7.5px auto;
+  border-radius: 5px;
+  width: 75%;
+  text-align: center;
+  font-size: 1.75em;
+  background-color: #fff;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .logo {
-    height: 158px;
-    width: 170px;
-    background-image: url('img/logo.png');
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    display: inline-block;
+  height: 158px;
+  width: 170px;
+  background-image: url("img/logo.png");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: inline-block;
 }
 
 /* ------ CART ------- */
 
 .cart-cont {
-    box-shadow: 0px 0px 5px rgba(0,0,0,0.2);
-    border-radius: 5px;
-    width: 85%;
-    background-color: #fff;
-    margin: 15px auto;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  width: 85%;
+  background-color: #fff;
+  margin: 15px auto;
 }
 
 .cart-cont h2 {
-    margin: 1em;
+  margin: 1em;
 }
 
 .cart-item-remove {
-border: none;
-outline: none;
-cursor: pointer;
-font-size: 16px;
-color: #000;
-background-color: #fff;
-margin: 0 .75em;
-font-size: 1.25em;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 16px;
+  color: #000;
+  background-color: #fff;
+  margin: 0 0.75em;
+  font-size: 1.25em;
 }
 
-.cart-item-remove i,  
-.cart-one-item-remove i  {
-    color: #e93131;
+.cart-item-remove i,
+.cart-one-item-remove i {
+  color: #e93131;
 }
 
 .cart-item-remove:active {
-    transform: scale(.98);
-    -webkit-transform:scale(.98)
+  transform: scale(0.98);
+  -webkit-transform: scale(0.98);
 }
 
 .title-cart {
-    padding: 1em;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  padding: 1em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .cart-items-cont {
-   position: relative;
-   display: flex;
-   align-items: center;
-   justify-content: space-between;
-   margin: .5em;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0.5em;
 }
 
 .cart-item-info {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    text-align: center;
-    width: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+  width: 60%;
 }
 
 .cart-items-cont h3 {
-    margin: 1em;
+  margin: 1em;
 }
 
 .cart-item-name {
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
-    width: 50%;
-    text-align: left;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  width: 50%;
+  text-align: left;
 }
 
 .cart-item-additions {
-    color: #656566;
-    text-overflow: ellipsis;
-    overflow:hidden;
-    white-space: nowrap;
-    font-size: .75em;
-    width: 50%;
-    text-align: center;
+  color: #656566;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  font-size: 0.75em;
+  width: 50%;
+  text-align: center;
 }
 
 .cart-one-item-remove {
-    border: none;
-    outline: none;
-    cursor: pointer;
-    background-color: #fff;
-    font-size: 1.25em;
-    text-emphasis: center;
-    color: #e93131;
-    
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background-color: #fff;
+  font-size: 1.25em;
+  text-emphasis: center;
+  color: #e93131;
 }
 
 .cart-one-item-remove:active {
-    transform: scale(.98);
-    -webkit-transform: scale(.98);
+  transform: scale(0.98);
+  -webkit-transform: scale(0.98);
 }
 
 .cart-item-price {
-    text-align: right;
-    width: 100px;
-   
+  text-align: right;
+  width: 100px;
 }
 
 .cart-cont-cont-p {
-    width: 12.5%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 12.5%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .linked-store {
-    margin: 1em auto;
-    margin-top: 0;
-    padding-bottom: 1em;
-    width: 100%;
-    text-align: center;
+  margin: 1em auto;
+  margin-top: 0;
+  padding-bottom: 1em;
+  width: 100%;
+  text-align: center;
 }
 
 .linked-store hr {
-    margin-bottom: 1em;
+  margin-bottom: 1em;
 }
 
 .empty-cart-text {
-    text-align: center;
+  text-align: center;
 }
 
 .empty-cart-link {
-    text-align: center;
-    color: #ba6fb4;
-    text-decoration: underline;
-    width: 200px;
-    height: 200px;
-    margin: 1em;
+  text-align: center;
+  color: #ba6fb4;
+  text-decoration: underline;
+  width: 200px;
+  height: 200px;
+  margin: 1em;
 }
 
 .empty-cart-link:hover {
-    color: #a757b5;
+  color: #a757b5;
 }
 
 .cart {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 /* ------ PRICE ADJUSTMENTS ------- */
 
-
 .total-cart-price-cont {
-    margin: 15px auto;
-    width: 100%;
+  margin: 15px auto;
+  width: 100%;
 }
 
 .tip-btn-cont {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin: 0 auto;
-    box-shadow: 0px 0px 5px rgba(0,0,0,0.2);
-    height: 100px;
-    width: 500px;
-    border-radius: 5px;
-    background-color: #fff;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 auto;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  height: 100px;
+  width: 500px;
+  border-radius: 5px;
+  background-color: #fff;
 }
 
 .tip-btn {
-    width: 100px;
-    height: 75px;
-    border-radius: 10%;
-    border: 2px solid #a757b5;
-    color: #a757b5;
-    font-weight: bolder;
-    font-size: 1em;
-    outline: 0;
-    background-color: #f7f7f7;
-    cursor: pointer;
+  width: 100px;
+  height: 75px;
+  border-radius: 10%;
+  border: 2px solid #a757b5;
+  color: #a757b5;
+  font-weight: bolder;
+  font-size: 1em;
+  outline: 0;
+  background-color: #f7f7f7;
+  cursor: pointer;
 }
 
 .tip-ten:disabled,
-    .tip-fif:disabled,
-        .tip-twe:disabled,
-            .order-btn:disabled {
-            cursor: not-allowed;
-        }
+.tip-fif:disabled,
+.tip-twe:disabled,
+.order-btn:disabled {
+  cursor: not-allowed;
+}
 
 .tip-btn:hover {
-    box-shadow: 0px 0px 2px #000;
+  box-shadow: 0px 0px 2px #000;
 }
 
 .tip-btn:active {
-    transform: scale(.98);
-    -webkit-transform: scale(.98);
+  transform: scale(0.98);
+  -webkit-transform: scale(0.98);
 }
 
 .tip-active {
-    background-color: #a757b5;
-    color: #fff;
+  background-color: #a757b5;
+  color: #fff;
 }
 
 .final-price-adjust-cont {
-    box-shadow: 0px 0px 5px rgba(0,0,0,0.2);
-    width: 500px;
-    border-radius: 5px;
-    background-color: #fff;
-    padding: 1em 0;
-    margin: 15px auto;
-    
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  width: 500px;
+  border-radius: 5px;
+  background-color: #fff;
+  padding: 1em 0;
+  margin: 15px auto;
 }
 
-.final-price-adjust-cont :is(h3, h2){
-    margin: 1em;
+.final-price-adjust-cont :is(h3, h2) {
+  margin: 1em;
 }
 
 .final-price-adjust-cont h3 {
-    color: #656566;
+  color: #656566;
 }
 
 .final-price-adjust-cont p {
-    float: right;
-    color: #000;
+  float: right;
+  color: #000;
 }
 
 /* -------- order BTN ------- */
 
-
 .order-cont {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .order-btn {
-    padding: 1em 2.5em;
-    border-radius: 5px;
-    background-color: #f4a32c;
-    border: none;
-    cursor: pointer;
-    font-size: 1.15em;
-    width: 50%;
-    margin: 0 auto;
-    margin-bottom: 15px;
+  padding: 1em 2.5em;
+  border-radius: 5px;
+  background-color: #f4a32c;
+  border: none;
+  cursor: pointer;
+  font-size: 1.15em;
+  width: 50%;
+  margin: 0 auto;
+  margin-bottom: 15px;
 }
 
 .order-btn:active {
-    transform: scale(.98);
-    -webkit-transform: scale(.98);
+  transform: scale(0.98);
+  -webkit-transform: scale(0.98);
 }
 
 /* -------- MODAL ------- */
 
 .modal-cont {
-    display: none;
-    position: fixed;
-    z-index: 10;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    overflow: auto;
-    background-color: rgba(0,0,0, 0.5);
-    overscroll-behavior: contain;
+  display: none;
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+  overscroll-behavior: contain;
 }
 
 .modal {
+  background-color: #f7f7f7;
+  height: 250px;
+  margin: 15% auto;
+  padding: 25px;
+  width: 500px;
+  box-shadow: 1px 5px 8px rgba(0, 0, 0, 0.5), -1px -5px 8px rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.modal h3 {
+  margin-top: 55px;
+}
+
+@media (max-width: 800px) {
+  .logo-cont {
+    font-size: 1.25em;
+  }
+
+  .logo {
+    height: 100px;
+    margin-right: 15px;
+  }
+
+  .cart-cont {
+    font-size: 0.75em;
+  }
+
+  .order-btn {
+    width: 95%;
+  }
+}
+
+@media (max-width: 600px) {
+  .cart-cont {
+    font-size: 0.5em;
+  }
+
+  .tip-btn-cont {
+    width: 95%;
+    height: 75px;
+  }
+
+  .tip-btn {
+    width: 20%;
+    height: 75%;
+  }
+
+  .final-price-adjust-cont {
+    width: 300px;
+    border-radius: 5px;
+    background-color: #fff;
+    padding: 1em 0;
+    margin: 15px auto;
+  }
+
+  .modal {
     background-color: #f7f7f7;
-    height: 250px;
+    height: 150px;
     margin: 15% auto;
     padding: 25px;
-    width: 500px;
-    box-shadow: 1px 5px 8px rgba(0,0,0, 0.5), -1px -5px 8px rgba(0,0,0,0.5);
+    width: 95%;
+    box-shadow: 1px 5px 8px rgba(0, 0, 0, 0.5), -1px -5px 8px rgba(0, 0, 0, 0.5);
     border-radius: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-}
+  }
 
-.modal h3 {
-    margin-top: 55px;
-}
-
-@media (max-width: 800px) {
-    .logo-cont {
-        font-size: 1.25em;
-    }
-
-    .logo {
-        height: 100px;
-        margin-right: 15px;
-    }
-
-    .cart-cont {
-        font-size: .75em;
-    }
-
-   
-
-    .order-btn {
-        width: 95%
-    }
-
-    
-}
-
-@media (max-width: 600px) {
-    .cart-cont {
-        font-size: .5em;
-    }
-
-    .tip-btn-cont {
-        width: 95%;
-        height: 75px;
-    }
-
-    .tip-btn {
-        width: 20%;
-        height: 75%;
-    }
-
-    .final-price-adjust-cont {
-        width: 300px;
-        border-radius: 5px;
-        background-color: #fff;
-        padding: 1em 0;
-        margin: 15px auto;
-    }
-
-    .modal {
-        background-color: #f7f7f7;
-        height: 150px;
-        margin: 15% auto;
-        padding: 25px;
-        width: 95%;
-        box-shadow: 1px 5px 8px rgba(0,0,0, 0.5), -1px -5px 8px rgba(0,0,0,0.5);
-        border-radius: 5px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-    }
-
-    .modal h3 {
-        margin-top: 20px;
-    }
+  .modal h3 {
+    margin-top: 20px;
+  }
 }
